--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Blocitoff</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1>Blocitoff</h1>
+    <p>Find me in app/views/welcome/index.html.erb</p>
+    <p>A self-destructing to-do list to keep you focused on the things that matter</p>
+    <a href="#" class="btn btn-info btn-lg">Sign Up</a>
+    <a href="#" class="btn btn-info btn-lg">Sign In</a>
+
+  </div>
+</div>
+
