--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,8 +3,10 @@
     <h1>Blocitoff</h1>
     <p>Find me in app/views/welcome/index.html.erb</p>
     <p>A self-destructing to-do list to keep you focused on the things that matter</p>
-    <a href="#" class="btn btn-info btn-lg">Sign Up</a>
+    
+    <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-info btn-lg"%>    
     <a href="#" class="btn btn-info btn-lg">Sign In</a>
+
 
   </div>
 </div>
