--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,24 @@
   <%= csrf_meta_tags %>
 </head>
   <body>
-    <div class="container">
-      <div class="pull-right">
-        <ul>
-          <ul class="nav nav-tabs">
-            <li><%= link_to "Home", welcome_index_path %></li>
-            <li><%= link_to "About", welcome_about_path %></li>
-            </ul>
+
+  <div class="container">
+    <ul class="nav nav-tabs">
+      <li><%= link_to "Home", welcome_index_path %></li>
+      <li><%= link_to "About", welcome_about_path %></li>
+
+        <div class="pull-right user-info">
+          <% if current_user %>
+            Hello <%= current_user.email %>! <%= link_to "sign out", destroy_user_session_path, method: :delete %>
+          <% else %>
+            <%= link_to "Sign In", new_user_session_path %> or
+            <%= link_to "Sign Up", new_user_registration_path %>
+          <% end %>
         </div>
+    </ul>
+
+  </div>
+  
 
     <%= yield %>
     </div>
