--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,8 +4,8 @@
     <p>Find me in app/views/welcome/index.html.erb</p>
     <p>A self-destructing to-do list to keep you focused on the things that matter</p>
     
+    <%= link_to "Sign In", new_user_session_path, class: 'btn btn-info btn-lg' %>
     <%= link_to "Sign Up", new_user_registration_path, class: "btn btn-info btn-lg"%>    
-    <a href="#" class="btn btn-info btn-lg">Sign In</a>
 
 
   </div>
