WIP add faker seed db, chg username to name and update tests

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,13 +1,14 @@
-<h1>User</h1>
-<p>Name: <%= @user.name if @user.name %></p>
-<p>Email: <%= @user.email if @user.email %> </p>
 
+<h3>Hello <%= @user.name %></h3>
+<p>Name: <%= @user.name if @user.name %></p>
+<p>Email: <%= @user.email if @user.email %></p>
 <div class="row">
   <div class="col-md-8">
-    <ul class="list-group">
-      <h2 class ="text-center">My Lists</h2>
-    </ul>
+    <ul class = "list-group" >
+      <h3 class="text-center">My To Do's</h3>
+      </ul>
+    </div>
   </div>
 </div>
-      
 
+</body>
