--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,13 +9,13 @@
 <div class="row">
 <div class="col-md-8">
     <div class="form-group">
-      <%= f.label :username %><br />
-      <%= f.text_field :username, autofocus: true %>
+      <%= f.label :name %><br />
+      <%= f.text_field :name, class: 'form-control', autofocus: true, placeholder: "Enter name" %>
     </div>
 
     <div class="form-group">
       <%= f.label :email %><br />
-      <%= f.email_field :email %>
+      <%= f.email_field :email, class: 'form-control', autofocus: true, placeholder: "Enter email" %>
     </div>
 
     <div class="form-group">
@@ -23,12 +23,12 @@
       <% if @validatable %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
       <% end %><br />
-      <%= f.password_field :password, autocomplete: "off" %>
+      <%= f.password_field :password, class: 'form-control', autocomplete: "off", placeholder: "Enter password" %>
     </div>
 
     <div class="form-group">
       <%= f.label :password_confirmation %><br />
-      <%= f.password_field :password_confirmation, autocomplete: "off" %>
+      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Re-enter password" %>
     </div>
 
     <div class="form-group">
