WIP todo add controllers model and partial

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,8 @@
   <div class="col-md-8">
     <ul class = "list-group" >
       <h3 class="text-center">My To Do's</h3>
+
+      <%= render 'items/form' %>
       </ul>
     </div>
   </div>
