--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,5 @@
 <ul class="list-group">
-  <% list.items.each do |item| %>
+  <% @items.each do |item| %>
     <li class=" list-group-item"><%= item.name %></li>
   <% end %>
 </ul>
