--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,8 +1,8 @@
-<%= simple_form_for [list, list.items.new], true do |f| %>
+<%= form_for [list, list.items.new], true do |f| %>
   <div class="form-group col-md-8">
     <%= f.label :description %>
     <%= f.text_field :description %>
   <div class="form-group col-md-4">
-    <%= f.submit "Add To Do", class: 'btn btn-success' %>
+    <%= f.submit "Add Item To List", class: 'btn btn-success' %>
   </div>
 <% end %>
