--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [list, list.items.new], true do |f| %>
+<%= form_for [@user, @user.items.new] do |f| %>
   <div class="form-group col-md-8">
     <%= f.label :description %>
     <%= f.text_field :description %>
