--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,1 @@
-<ul class="list-group">
-  <% @items.each do |item| %>
-    <li class=" list-group-item"><%= item.name %></li>
-  <% end %>
-</ul>
+    <li class=" list-group-item"><%= item.description %></li>
