--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,8 +1,10 @@
-<%= form_for [@user, @user.items.new] do |f| %>
-  <div class="form-group col-md-8">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  <div class="form-group col-md-4">
-    <%= f.submit "Add Item To List", class: 'btn btn-success' %>
-  </div>
+<% if current_user %>
+  <%= form_for [@user, @user.items.new] do |f| %>
+    <div class="form-group col-md-8">
+      <%= f.label :description %>
+      <%= f.text_field :description %>
+    <div class="form-group col-md-4">
+      <%= f.submit "Add Item To List", class: 'btn btn-success' %>
+    </div>
+  <% end %>
 <% end %>
