--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,5 +1,7 @@
-    <li class=" list-group-item"><%= item.description %></li>
+<li class=" list-group-item">
+<%= item.description %>
+  <%= link_to " ", [current_user, item], method: :delete, class: 'glyphicon glyphicon-remove', remote: true %></li>
 
-    <% @user.items do |item| %>
-      <%= link_to " ", user_path, method: :delete, class: 'glyphicon glyphicon-ok glyph-right' %>
-      <% end %>
+    
+      
+     
