--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,6 +1,6 @@
 <li class=" list-group-item">
 <%= item.description %>
-  <%= link_to " ", [current_user, item], method: :delete, class: 'glyphicon glyphicon-remove', remote: true %></li>
+  <%= link_to " ", [current_user, item], method: :delete, class: 'glyphicon glyphicon-ok pull-right' %></li>
 
     
       
