--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -2,9 +2,10 @@
   <%= form_for [@user, @user.items.new] do |f| %>
     <div class="form-group col-md-8">
       <%= f.label :description %>
-      <%= f.text_field :description %>
+      <%= f.text_field :description, autofocus: true, placeholder: "Enter another item" %>
     <div class="form-group col-md-4">
       <%= f.submit "Add Item To List", class: 'btn btn-success' %>
+    </div>
     </div>
   <% end %>
 <% end %>
