--- a/app/views/items/create.js.erb
+++ b/app/views/items/create.js.erb
@@ -1,1 +1,1 @@
-$('.js-items').prepend("<%= escape_javascript(render(@item)) %>");
+$('.js-items').append("<%= escape_javascript(render(@item)) %>");
