--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,13 @@
-
-<h3>Hello <%= @user.name %></h3>
-<div class="row">
-  <div class="col-md-8">
-    <h3 class="text-center">Your To Do's</h3>
-      <ul class = "list-group" >
-        <%= render @items %>
-      </ul>
-      <%= render "items/form" %>
+<div class="container-fluid">
+  <h3>Hello <%= @user.name %></h3>
+  <div class="row">
+    <div class="col-md-lg">
+      <h3 class="text-center">Your To Do's</h3>
+        <ul class = "list-group js-items" >
+          <%= render @items %>
+        </ul>
+        <%= render "items/form" %>
+    </div>
   </div>
 </div>
   
