--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <% if current_user %>
   <%= form_for [@user, @user.items.new], remote: true do |f| %>
     <div class="form-group col-md-8">
@@ -6,6 +7,6 @@
     <div class="form-group col-md-4">
       <%= f.submit "Add Item To List", class: 'btn btn-success' %>
     </div>
-    </div>
+  </div>
   <% end %>
 <% end %>
