--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -3,10 +3,11 @@
   <%= form_for [@user, @user.items.new], remote: true do |f| %>
     <div class="form-group col-md-8">
       <%= f.label :description %>
-      <%= f.text_field :description, autofocus: true, placeholder: "Enter another item" %>
+      <%= f.text_field :description, autofocus: true, placeholder: "Enter another item", class: "js-item-description" %>
     <div class="form-group col-md-4">
       <%= f.submit "Add Item To List", class: 'btn btn-success' %>
     </div>
   </div>
   <% end %>
 <% end %>
+
