--- a/app/views/items/create.js.erb
+++ b/app/views/items/create.js.erb
@@ -1,1 +1,4 @@
-$('.js-items').append("<%= escape_javascript(render(@item)) %>");
+
+$('.js-items').append("<%= escape_javascript(render @item) %>");
+
+$('.js-item-description').val("")
