--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <% if current_user %>
-  <%= form_for [@user, @user.items.new], remote: true do |f| %>
+  <%= form_for [@user, Item.new], remote: true do |f| %>
     <div class="form-group col-md-8">
       <%= f.label :description %>
       <%= f.text_field :description, autofocus: true, placeholder: "Enter another item", class: "js-item-description" %>
