--- a/app/views/items/create.js.erb
+++ b/app/views/items/create.js.erb
@@ -1,4 +1,4 @@
 
-$('.js-items').append("<%= escape_javascript(render @item) %>");
+$('.js-items').prepend("<%= escape_javascript(render @item) %>");
 
 $('.js-item-description').val("")
