--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,11 +3,13 @@
   <div class="row">
     <div class="col-md-lg">
       <h3 class="text-center">Your To Do's</h3>
-        <ul class = "list-group js-items" >
-          <%= render @items %>
-        </ul>
+      <div>
         <%= render "items/form" %>
-        
+      </div>
+      <ul class = "list-group js-items" >
+        <%= render @items %>
+      </ul>
+
     </div>
   </div>
 </div>
