remove bug text from welcome index

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
       <div>
         <%= render "items/form" %>
       </div>
+      <div class="container"
       <ul class = "list-group js-items" >
         <%= render @items %>
       </ul>
