--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
-<% if current_user %>
-  <%= form_for [@user, Item.new], remote: true do |f| %>
-    <div class="form-group col-md-8">
-      <%= f.label :description %>
-      <%= f.text_field :description, autofocus: true, placeholder: "Enter another item", class: "js-item-description" %>
-    <div class="form-group col-md-4">
-      <%= f.submit "Add Item To List", class: 'btn btn-success' %>
+
+  <% if current_user %>
+    <%= form_for [@user, Item.new], remote: true do |f| %>
+      <div class="form-group col-md-8">
+
+        <%= f.label :description %>
+        <%= f.text_field :description, autofocus: true, placeholder: "Enter another item", class: "js-item-description" %>   </div>   <div class="form-group col-md-8">
+        <%= f.submit "Add Item To List", class: 'btn btn-success' %>
+        </div>
+      
     </div>
-  </div>
   <% end %>
 <% end %>
-
+</div>
